separate datasource for measurements
