# server/measurements/model.go
@@ -1,0 +1,13 @@
+package measurements
+
+type MeasurementValue struct {
+	CreatedAt int
+	Data      *string
+}
+
+type Measurement struct {
+	Id            int
+	LastValueTime *int
+	LastValue     *string
+	Name          string
+}
