# server/service/service.go
@@ -4,11 +4,70 @@ import (
 	"time"
 
 	"github.com/google/uuid"
+	"github.com/icza/gox/gox"
 	"github.com/pbloigu/gonfig/api"
-	"github.com/pbloigu/gonfig/server/repository"
+	"github.com/pbloigu/gonfig/server/configurations"
+	"github.com/pbloigu/gonfig/server/measurements"
 )
 
 var hb = make(map[string]time.Time)
+
+type Direction string
+
+const (
+	ASC  Direction = "ASC"
+	DESC Direction = "DESC"
+)
+
+type Sort struct {
+	Sort string
+	Dir  Direction
+}
+
+type Pargination struct {
+	Page int
+	Size int
+}
+
+func NewPagination(size int, defaultSize int, page int) Pargination {
+	return Pargination{
+		Page: func() int {
+			if page < 1 {
+				return 1
+			} else {
+				return page
+			}
+		}(),
+		Size: func() int {
+			if size <= 0 {
+				return defaultSize
+			} else {
+				return size
+			}
+		}(),
+	}
+}
+
+func NewSort(sort string, defaultSort string, dir string) Sort {
+	return Sort{
+		Sort: func() string {
+			if sort == "" {
+				return defaultSort
+			} else {
+				return sort
+			}
+		}(),
+		Dir: func() Direction {
+			if dir == string(DESC) {
+				return DESC
+			} else if dir == string(ASC) {
+				return ASC
+			} else {
+				return DESC
+			}
+		}(),
+	}
+}
 
 func DoHeartbeat(appId string) {
 	hb[appId] = time.Now()
@@ -21,10 +80,10 @@ func GetHartbeat(appId string) api.Heartbeat {
 }
 
 func UpdateApplication(application api.Application) api.Application {
-	repository.UpdateApplication(repository.Application{
+	configurations.UpdateApplication(configurations.Application{
 		Id:   application.Id,
 		Name: application.Name,
-		Configuration: repository.Configuration{
+		Configuration: configurations.Configuration{
 			Data: application.Configuration.Data,
 		},
 	})
@@ -32,11 +91,11 @@ func UpdateApplication(application api.Application) api.Application {
 }
 
 func AddApplication(application api.Application) api.Application {
-	a := repository.PersistApplication(repository.Application{
+	a := configurations.PersistApplication(configurations.Application{
 		Id:     uuid.NewString(),
 		Name:   application.Name,
 		ApiKey: uuid.NewString(),
-		Configuration: repository.Configuration{
+		Configuration: configurations.Configuration{
 			Data: application.Configuration.Data,
 		},
 	})
@@ -53,7 +112,7 @@ func AddApplication(application api.Application) api.Application {
 }
 
 func GetApplication(id string) api.Application {
-	a := repository.GetApplication(id)
+	a := configurations.GetApplication(id)
 	return api.Application{
 		Id:   a.Id,
 		Name: a.Name,
@@ -66,7 +125,7 @@ func GetApplication(id string) api.Application {
 
 func ListApplications() []api.Application {
 	result := make([]api.Application, 0)
-	for _, a := range repository.ListApplications() {
+	for _, a := range configurations.ListApplications() {
 		result = append(result, api.Application{
 			Id:   a.Id,
 			Name: a.Name,
@@ -80,24 +139,29 @@ func ListApplications() []api.Application {
 }
 
 func DeleteApplication(id string) {
-	repository.DeleteApplication(id)
+	configurations.DeleteApplication(id)
+	measurements.DeleteApplication(id)
 }
 
 func AddConfiguration(appId string, configuration api.Configuration) {
-	repository.PersistConfiguration(appId, repository.Configuration{
+	configurations.PersistConfiguration(appId, configurations.Configuration{
 		Data: configuration.Data,
 	})
 }
 
 func AddMeasurement(appId string, measurement api.Measurement) {
-	repository.PeristMeasurement(appId, repository.Measurement{
+	measurements.PeristMeasurement(appId, measurements.Measurement{
 		Name:      measurement.Name,
-		LastValue: measurement.LastValue.Data,
+		LastValue: measurement.LastValue,
 	})
 }
 
+func InitMeasurement(appId string, measurement api.Measurement) {
+	measurements.InitMeasurement(appId, measurement.Name)
+}
+
 func GetConfiguration(appId string) api.Configuration {
-	c := repository.GetConfiguration(appId)
+	c := configurations.GetConfiguration(appId)
 	return api.Configuration{
 		Data: c.Data,
 		Date: c.CreatedAt,
@@ -105,41 +169,46 @@ func GetConfiguration(appId string) api.Configuration {
 }
 
 func GetMeasurement(appId string, measurementName string) api.Measurement {
-	m := repository.GetMeasurement(appId, measurementName)
+	m := measurements.GetMeasurement(appId, measurementName)
 	return api.Measurement{
-		Name: m.Name,
-		LastValue: api.MeasurementValue{
-			Data: m.LastValue,
-			Date: m.LastValueTime,
-		},
+		Name:          m.Name,
+		LastValue:     m.LastValue,
+		LastValueTime: gox.If(m.LastValueTime != nil, timePtr(m.LastValueTime), nil),
 	}
 }
 
-func ListMeasurementValues(appId string, measurementName string) api.MeasurementValues {
-	m := repository.GetMeasurement(appId, measurementName)
-	if m != (repository.Measurement{}) {
+func timePtr(unixTs *int) *time.Time {
+	if unixTs == nil {
+		return nil
+	} else {
+		t := time.Unix(int64(*unixTs), 0)
+		return &t
+	}
+}
+
+func ListMeasurementValues(appId string, measurementName string, sort Sort, pagination Pargination) api.MeasurementValues {
+	m := measurements.GetMeasurement(appId, measurementName)
+	if m != (measurements.Measurement{}) {
 		result := api.MeasurementValues{
 			Measurement: api.Measurement{
-				Name: m.Name,
-				LastValue: api.MeasurementValue{
-					Data: m.LastValue,
-					Date: m.LastValueTime,
-				},
+				Name:          m.Name,
+				LastValue:     m.LastValue,
+				LastValueTime: gox.If(m.LastValueTime != nil, timePtr(m.LastValueTime), nil),
 			},
 			Values: func() []api.MeasurementValue {
 				mvs := make([]api.MeasurementValue, 0)
-				for _, mv := range repository.ListMeasurementValues(m.Id) {
+				for _, mv := range measurements.ListMeasurementValues(m.Id, sort.Sort, string(sort.Dir), pagination.Page, pagination.Size) {
 					mvs = append(mvs, api.MeasurementValue{
 						Data: mv.Data,
-						Date: mv.CreatedAt,
+						Time: time.Unix(int64(mv.CreatedAt), 0),
 					})
 				}
 				return mvs
 			}(),
 		}
-		result.Total = len(result.Values)
-		result.Page = 1
-		result.PageSize = result.Total
+		result.Total = measurements.CountMeasurementValues(m.Id)
+		result.Page = pagination.Page
+		result.PageSize = pagination.Size
 		return result
 	} else {
 		return api.MeasurementValues{}
@@ -149,22 +218,20 @@ func ListMeasurementValues(appId string, measurementName string) api.Measurement
 
 func ListMeasurements(appId string) []api.Measurement {
 	result := make([]api.Measurement, 0)
-	for _, m := range repository.ListMeasurements(appId) {
+	for _, m := range measurements.ListMeasurements(appId) {
 		result = append(result, api.Measurement{
-			Name: m.Name,
-			LastValue: api.MeasurementValue{
-				Data: m.LastValue,
-				Date: m.LastValueTime,
-			},
+			Name:          m.Name,
+			LastValue:     m.LastValue,
+			LastValueTime: gox.If(m.LastValueTime != nil, timePtr(m.LastValueTime), nil),
 		})
 	}
 	return result
 }
 
 func IsAllowed(appId string, apiKey string) bool {
-	return repository.IsAllowed(appId, apiKey)
+	return configurations.IsAllowed(appId, apiKey)
 }
 
 func Login(login string, password string) bool {
-	return repository.Login(login, password)
+	return configurations.Login(login, password)
 }
